<resources>
    <string name="app_name">GameCreator</string>

    <string name="play_game">PLAY</string>
    <string name="create_game">CREATE</string>
    <string name="save_game">SAVE GAME</string>

    <string name="text">Text</string>
    <string name="text_solution">Text Solution</string>
    <string name="image">Image</string>
    <string name="multiple">Multiple choice</string>

    <string name="text_component">Text</string>

    <string name="add_stage">Add stage</string>
    <string name="add_solution_component">+ Solution</string>
    <string name="add_component">+ Component</string>

    <string name="done">Done</string>
    <string name="discard">Discard</string>

    <string name="name_of_game">Game name:&#032;</string>

    <string name="text_editor_fragment">Editor</string>
    <string name="text_preview_fragment">Preview</string>
    <string name="text_config_fragment">Config</string>

    <string name="solution_text">Solution:</string>
    <string name="button_text">Button text:</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="select_image">Select Image</string>
    <string name="take_picture">Take Picture</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="minus_image">-</string>
    <string name="plus_image">+</string>

    <string name="input_text">Input text:</string>

    <string name="add_option">Add an extra option</string>

    <string name="correct_solution">Input what the correct solution is:</string>
    <string name="button_text_input">Input what the button should say:</string>
    
    <string name="difficulty">Difficulty:&#032;</string>

    <string name="color_theme">Color theme:&#032;</string>
    <string name="location">Location:&#032;</string>
    <string name="save">Save</string>
    <string name="number_of_tries">Number of tries:&#032;</string>
    <string name="change">CHANGE</string>

    <string name="finish_game">Finish</string>
    <string name="play_again">Play again</string>

    <string-array name="difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Expert</item>
    </string-array>

    <string name="text_size">Text size</string>

    <string name="left_text">Left</string>
    <string name="center_text">Center</string>
    <string name="right_text">Right</string>
    <string name="input_option_4">Input option 4</string>
    <string name="input_option_3">Input option 3</string>
    <string name="input_option_2">Input option 2</string>
    <string name="input_option_1">Input option 1</string>

    <string name="my_games">MY GAMES</string>

    <string name="delete_stage">X</string>

    <string-array name="game_components">
        <item>Text</item>
        <item>Image</item>
    </string-array>

    <string-array name="color_array">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string-array name="no_tries_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>Unlimited</item>
    </string-array>

</resources>
