<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/boxborder"
    android:layout_margin="10dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/game_card"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:focusable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/game_name"
                android:text="@string/text"
                android:textStyle="bold"
                android:textSize="17sp"
                android:paddingVertical="2dp"
                android:paddingHorizontal="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?attr/textAppearanceHeadline6"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/play_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play_game"
                    android:layout_marginHorizontal="5dp"
                    style="?attr/materialButtonOutlinedStyle"/>

                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:layout_marginHorizontal="5dp"
                    style="?attr/materialButtonOutlinedStyle"/>

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:layout_marginHorizontal="5dp"
                    style="?attr/materialButtonOutlinedStyle"/>
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
